fix compile/IDE warnings
* Use `X.valueOf()` and `X.parseX()` rather then `new X()`
* Rename ignored caught exception variables to `ignored`
* Update generic type `JComboBox<VideoEffect>`